# test-macro

./: Cargo.toml  README.md
.github/workflows/: ci.yml  execute_test.yml
src/: lib.rs  test_macro.rs
tests/: test_macro.rs
